--- a/plugin.xml
+++ b/plugin.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://raw.githubusercontent.com/shopware/shopware/5.2/engine/Shopware/Components/Plugin/schema/plugin.xsd">
     <label lang="de">Paul Theme</label>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <copyright>Marc Manusch</copyright>
     <license>MIT</license>
     <link>http://store.shopware.com</link>
     <author>Marc Manusch</author>
     <compatibility minVersion="5.2.0"/>
+
+
+    <changelog version="1.0.1">
+        <changes>ADD: Footer Vat menue</changes>
+        <changes>FIX: Sidebar in search result</changes>
+        <changes>FIX: Last seen products on content sites</changes>
+    </changelog>
+
+    <changelog version="1.0.0">
+        <changes>Erstveröffentlichung</changes>
+    </changelog>
+
+
 </plugin>
